dedicate to public domain
I achieve this with CC0:

(1) The full CC0 text appears in LICENSE and COPYING.

(2) I've added text near the top of each file as recommended at https://wiki.creativecommons.org/wiki/CC0_FAQ.

I also used this opportunity to put brief summary comments atop those files that lacked them, and to fix one prose typo.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
+# .gitignore - files to ignore (not much here)
+#
+# This file is part of setup-cgit, an unofficial cgit how-to and scripts.
+#
+# Written in 2019 by Eliah Kagan <degeneracypressure@gmail.com>.
+#
+# To the extent possible under law, the author(s) have dedicated all copyright
+# and related and neighboring rights to this software to the public domain
+# worldwide. This software is distributed without any warranty.
+#
+# You should have received a copy of the CC0 Public Domain Dedication along
+# with this software. If not, see
+# <http://creativecommons.org/publicdomain/zero/1.0/>.
+
 # editor tempfiles
 .*.swp
