have / redirect to cgit sorting by idle times

--- a/redirect.conf
+++ b/redirect.conf
@@ -1,4 +1,4 @@
-# redirect.conf - redirects traffic from / to /cgit
+# redirect.conf - redirects traffic from / to /cgit/?s=idle
 #
 # This file is part of setup-cgit, an unofficial cgit how-to and scripts.
 #
@@ -12,4 +12,4 @@
 # with this software. If not, see
 # <http://creativecommons.org/publicdomain/zero/1.0/>.
 
-RedirectMatch ^/$ /cgit/
+RedirectMatch ^/$ /cgit/?s=idle
